update the slideshow bug on IE 11

--- a/src/css/slideshow.scss
+++ b/src/css/slideshow.scss
@@ -7,8 +7,22 @@
   position: relative;
   margin: 3% auto;
   width: 100%;
-  height:100%;
-  min-height:600px;
+  //height:100%;
+  //min-height:600px;
+  overflow: auto;
+
+  .socialIcons {
+    position: absolute !important;
+    width: 53% !important;
+    /* height: 16%; */
+    right: 0;
+    top: 27%;
+
+    ul {
+      position: relative !important;
+      bottom: 0 !important;
+    }
+  }
 
   .caption {
     position: absolute;
@@ -47,6 +61,19 @@
     text-transform: uppercase;
     color:white;
     padding-bottom: 2%;
+    margin-bottom: 25px;
+
+
+    .text{
+      width: 100%;
+      float: left;
+    }
+
+    .title {
+      display: inline-block;
+      float: left;
+      width: auto !important;
+    }
 
   }
 
@@ -57,7 +84,7 @@
 
   .panelSlideShow {
     position: relative;
-    width: 70%;
+    width: 90%;
     margin: 0 auto;
 
     .bx-wrapper {
@@ -83,7 +110,7 @@
       top: 50%;
       width: 100%;
       //height: 100%;
-      pointer-events:none;
+      //pointer-events:none;
       z-index:4;
       a {
 
@@ -193,6 +220,10 @@ and (min-width : 1700px) {
     }
   }
 
+  .captionText {
+    font-size: 18px;
+  }
+
   .bx-prev {
     position: absolute;
     width: 62px !important;
@@ -256,6 +287,10 @@ and (max-width : 1199px) {
 and (min-width : 2200px) {
   .panelSlideShow {
     width: 80% !important;
+  }
+
+  .captionText {
+    font-size: 18px;
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
